# devices_rap

./: .gitallowed  .gitignore  .pre-commit-config-windows.yaml  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  amber_report_excel_config.yaml  conftest.py  example.env  index.html  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  test_file.txt
.github/workflows/: docs.yml  python-package.yml
amber_report_process_map/: index.html
api_reference/: index.html
api_reference/clean_data/: index.html
api_reference/config/: index.html
api_reference/constants/: index.html
api_reference/create_cuts/: index.html
api_reference/data_in/: index.html
api_reference/data_in/load_csv/: index.html
api_reference/data_in/load_sql/: index.html
api_reference/data_io/: index.html
api_reference/data_io/input/data_loader/: index.html
api_reference/data_io/output/excel_writer/: index.html
api_reference/data_io/output/pickle_writer/: index.html
api_reference/data_out/: index.html
api_reference/exception_notes/: index.html
api_reference/interpret_output_instructions/: index.html
api_reference/joins/: index.html
api_reference/pipeline/: index.html
api_reference/summary_tables/: index.html
data_dictionary/: index.html
devices_rap/: __main__.py  clean_data.py  config.py  constants.py  create_cuts.py  data_out.py  errors.py  exception_notes.py  interpret_output_instructions.py  joins.py  pipeline.py  processing.py  summary_tables.py  utils.py
devices_rap/data_in/: load_csv.py
devices_rap/data_io/: __init__.py  core.py  utils.py
devices_rap/data_io/input/: __init__.py  csv_loader.py  data_loader.py  sql_loader.py
devices_rap/data_io/output/: __init__.py  excel_writer.py  pickle_writer.py
docs/: README.md  STRUCTURE.md  amber_report_pipeline_documentation.md  gen_ref_pages.py  mkdocs.yml  worksheet_output_documentation.md
docs/content/: amber_report_process_map.md  data_dictionary.md  index.md  usage.md  worksheet_output_documentation.md
docs/content/api_reference/: constants.md  create_cuts.md  data_out.md  exception_notes.md  index.md
docs/content/api_reference/data_in/: index.md
docs/content/api_reference/data_io/: index.md
docs/content/api_reference/data_io/input/: data_loader.md
docs/content/api_reference/data_io/output/: excel_writer.md  pickle_writer.md
docs/content/user_guide/: developer.md  index.md  user.md
docs/docs/: index.md  worksheet_output_documentation.md
docs/docs/api_reference/: clean_data.md  config.md  interpret_output_instructions.md  joins.md  pipeline.md  summary_tables.md
docs/docs/api_reference/data_in/: index.md  load_csv.md  load_sql.md
docs/docs/functional_process_maps/: amber_report_process_map.md
docs/overrides/partials/: footer.html
functional_process_maps/amber_report_process_map/: index.html
nhsd-git-secrets/: pre-commit.ps1
notebooks/: data_import.py  data_import_prototyping.py
rap_devices/: __init__.py  config.py  data_in.py  features.py  pipeline.py  plots.py  rap_devices.py
rap_devices/data_in/: load_data.py  load_exceptions_data.py  load_master_data.py
rap_devices/modeling/: predict.py  train.py
search/: search_index.json
sql/: query_agem_slam_devices.sql  query_devices_reporting_amber.sql  query_provider_codes_lookup.sql
tests/e2e_tests/: test_e2e_load_csv.py  test_e2e_placeholder.py  test_pipeline_backtests.py
tests/unittests/: test_clean_data.py  test_config.py  test_create_cuts.py  test_data_in.py  test_data_out.py  test_errors.py  test_exception_notes.py  test_interpret_output_instructions.py  test_joins.py  test_pipeline.py  test_processing.py  test_summary_tables.py  test_unittest_placeholder.py  test_utils.py
tests/unittests/test_data_in/: test_load_csv.py  test_load_data.py  test_load_exceptions.py  test_load_master_data.py
tests/unittests/test_data_io/: __init__.py  test_data_loader.py
usage/: index.html
user_guide/: index.html
user_guide/developer/: index.html
user_guide/user/: index.html
worksheet_output_documentation/: index.html
