[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "devices_rap"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Joseph Wilson" },
  { name = "NHS England - Direct Commissioning" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10"
dependencies = [
    # Core data processing libraries (production)
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "scikit-learn",
    
    # Visualization and reporting (production)
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2", 
    "xlsxwriter",
    
    # Utility libraries (production)
    "loguru",
    "python-dotenv",
    "tqdm",
    "typer",
    
    # External NHS package
    "nhs-herbot @ git+https://github.com/nhsengland/nhs_herbot.git@2025.08.12",
]

[project.optional-dependencies]
# Development tools: testing, linting, formatting
dev = [
    "black",
    "exceptiongroup", 
    "flake8",
    "isort",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
]

# Documentation tools
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pymdown-extensions",
]

# Interactive development tools
jupyter = [
    "ipykernel>=6.30.1",
    "ipython",
    "jupyter>=1.1.1", 
    "jupyterlab",
    "notebook",
]

# Utility dependency (needed for some dev workflows)
utils = [
    "pip",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff]
lint.isort.known-first-party = ["devices_rap"]
lint.isort.force-sort-within-sections = true

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "no_data_needed: marks tests that do not require datafiles (deselect with '-m \"not no_data_needed\"')",
    "data_needed: marks tests that do require datafiles (deselect with '-m \"not data_needed\"')",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/_version.py",
]
